[package]
name = "zkmesh_fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
serde_json = "1.0"
rss = "2.0"
atom_syndication = "0.12.0"
futures = "0.3"

[dev-dependencies]
mockito = "0.31"
tempfile = "3.2"